<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Pilihan Barang -->
    <LinearLayout
        android:id="@+id/chooseItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="23sp"
            android:gravity="center"
            android:padding="16dp"/>
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customerNameEditText"
                android:text=" "
                android:hint="@string/text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemCodeEditText"
                android:text=" "
                android:hint="@string/text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/itemPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityEditText"
                android:text=" "
                android:hint="@string/text3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text4"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <RadioGroup
            android:id="@+id/membershipRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/goldRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode1" />

            <RadioButton
                android:id="@+id/silverRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode2" />

            <RadioButton
                android:id="@+id/regularRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode3" />
        </RadioGroup>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_proses"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Tampilan Hasil -->
    <RelativeLayout
        android:id="@+id/showResultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_bagikan"
            android:onClick="shareTransaction"
            android:layout_marginTop="40dp"
            android:layout_below="@id/resultTextView"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</LinearLayout>
